// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cssLoader should add style loader if flag is on 1`] = `
Array [
  Object {
    "loader": "style-loader",
    "options": Object {},
  },
  Object {
    "loader": "css-loader",
    "options": Object {
      "importLoaders": 0,
      "modules": true,
    },
  },
]
`;

exports[`cssLoader should increment every defined importLoaders 1`] = `
Array [
  Object {
    "loader": "css-loader/locals",
    "options": Object {
      "importLoaders": 1,
      "modules": true,
    },
  },
  Object {
    "loader": "scss",
    "options": Object {},
  },
]
`;

exports[`cssLoader should modify name of css loader for server env 1`] = `
Array [
  Object {
    "loader": "css-loader/locals",
    "options": Object {
      "importLoaders": 0,
      "modules": true,
    },
  },
]
`;

exports[`cssLoader should not modify name of css loader for not server env 1`] = `
Array [
  Object {
    "loader": "css-loader",
    "options": Object {
      "importLoaders": 0,
      "modules": true,
    },
  },
]
`;

exports[`cssLoader should use custom options 1`] = `
Array [
  Object {
    "loader": "style-loader",
    "options": Object {},
  },
  Object {
    "loader": "css-loader",
    "options": Object {
      "importLoaders": 0,
      "localIdentName": "[hash:base64]",
      "minimize": true,
      "modules": false,
    },
  },
]
`;
